--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <h1>Fraud Detection Application</h1>
         <form action="/predict" method="post">
             <div class="form-group">
-                <label for="step">Step:</label>
+                <label for="step">Transaction Batch</label>
                 <input type="text" name="step" required>
             </div>
 
@@ -21,22 +21,22 @@
             </div>
 
             <div class="form-group">
-                <label for="oldbalanceOrg">Old Balance Origin:</label>
+                <label for="Send">Sender's Old Balance</label>
                 <input type="text" name="oldbalanceOrg" required>
             </div>
 
             <div class="form-group">
-                <label for="newbalanceOrig">New Balance Origin:</label>
+                <label for="newbalanceOrig">Sender's New Balance</label>
                 <input type="text" name="newbalanceOrig" required>
             </div>
 
             <div class="form-group">
-                <label for="oldbalanceDest">Old Balance Destination:</label>
+                <label for="oldbalanceDest">Recipient's Old Balance</label>
                 <input type="text" name="oldbalanceDest" required>
             </div>
 
             <div class="form-group">
-                <label for="newbalanceDest">New Balance Destination:</label>
+                <label for="newbalanceDest">Recipient's New Balance</label>
                 <input type="text" name="newbalanceDest" required>
             </div>
 
